# paddleocr_rs

./: Cargo.toml  README.md
src/: _recognition.rs  detection.rs  error.rs  lib.rs
