[package]
name = "paddleocr_rs"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
homepage = "https://github.com/yuanyan3060/paddleocr_rs"
repository = "https://github.com/yuanyan3060/paddleocr_rs"
keywords = ["paddle", "ocr", "onnx"]

[dependencies]
image = "0.25.5"
imageproc = "0.25.0"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
